welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: expected class or object definition
def fleur(v: Color){
^FlowerPot:9: error: expected class or object definition
def marque(c: Color){setCouleurBrosse(c);baisseBrosse();leveBrosse()}
^FlowerPot:12: error: Unmatched closing brace '}' ignored here
}
^